fix pagination bug,search text smaller on small devices,basic notify component,gsap

--- a/src/index.css
+++ b/src/index.css
@@ -114,7 +114,7 @@
     }
 
     & img {
-      @apply absolute right-1 top-3 h-5 w-5;
+      @apply absolute right-2 top-2 h-7 w-7;
     }
 
     & input {
